<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity">
<LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:background="#1e90ff"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:text="@string/register"
            android:background="#ffffff"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/First_name"
                    android:inputType="text"
                    android:background="#ffffff"
                    android:hint="@string/Firts_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Last_name"
                    android:inputType="text"
                    android:background="#ffffff"
                    android:hint="@string/Last_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"/>

        </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail_adress"
            android:inputType="textEmailAddress"
            android:background="#ffffff"
            android:hint="@string/mail_adress"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Male"
                android:background="#ffffff"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="75dp"
                android:text="@string/male"
                android:layout_weight="1"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Female"
                android:background="#ffffff"
                android:layout_marginRight="75dp"
                android:layout_marginLeft="40dp"
                android:text="@string/female"
                android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kotlin"
                android:background="#ffffff"
                android:text="@string/kotlin"
                android:paddingRight="10dp"
                android:layout_marginLeft="16dp"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Java"
                android:background="#ffffff"
                android:text="@string/java"
                android:paddingRight="10dp"
                android:layout_marginLeft="10dp"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/HTML"
                android:background="#ffffff"
                android:text="@string/HTML"
                android:paddingRight="10dp"
                android:layout_marginLeft="10dp"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CSS"
                android:background="#ffffff"
                android:text="@string/CSS"
                android:paddingRight="10dp"
                android:layout_marginLeft="10dp"
        />

    </LinearLayout>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:background="#ffffff"
            android:entries="@array/courses"
            android:paddingVertical="5dp"
            android:layout_marginTop="10dp"/>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:background="#ffffff"
            android:entries="@array/place"
            android:layout_marginTop="10dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="center"
            android:id="@+id/button"/>


</LinearLayout>
</ScrollView>